<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".presentation.champion_details.ChampionDetailsFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clChampionDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/championImage"
                android:layout_width="@dimen/champion_detail_image_width_size"
                android:layout_height="@dimen/champion_detail_image_height_size"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/championSpellOneText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/spell_q"
                android:textColor="@color/champion_detail_text"
                app:layout_constraintEnd_toStartOf="@+id/championSpellTwoText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/championImage" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/championSpellOneImage"
                android:layout_width="@dimen/champion_detail_spell_image_size"
                android:layout_height="@dimen/champion_detail_spell_image_size"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/championSpellOneText"
                app:layout_constraintStart_toStartOf="@+id/championSpellOneText"
                app:layout_constraintTop_toBottomOf="@+id/championSpellOneText" />


            <TextView
                android:id="@+id/championSpellTwoText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/spell_w"
                android:textColor="@color/champion_detail_text"
                app:layout_constraintEnd_toStartOf="@+id/championSpellThreeText"
                app:layout_constraintStart_toEndOf="@+id/championSpellOneText"
                app:layout_constraintTop_toTopOf="@+id/championSpellOneText" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/championSpellTwoImage"
                android:layout_width="@dimen/champion_detail_spell_image_size"
                android:layout_height="@dimen/champion_detail_spell_image_size"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/championSpellTwoText"
                app:layout_constraintStart_toStartOf="@+id/championSpellTwoText"
                app:layout_constraintTop_toBottomOf="@+id/championSpellTwoText" />


            <TextView
                android:id="@+id/championSpellThreeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/spell_e"
                android:textColor="@color/champion_detail_text"
                app:layout_constraintEnd_toStartOf="@+id/championSpellFourText"
                app:layout_constraintStart_toEndOf="@+id/championSpellTwoText"
                app:layout_constraintTop_toTopOf="@+id/championSpellTwoText" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/championSpellThreeImage"
                android:layout_width="@dimen/champion_detail_spell_image_size"
                android:layout_height="@dimen/champion_detail_spell_image_size"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/championSpellThreeText"
                app:layout_constraintStart_toStartOf="@+id/championSpellThreeText"
                app:layout_constraintTop_toBottomOf="@+id/championSpellThreeText" />


            <TextView
                android:id="@+id/championSpellFourText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/spell_r"
                android:textColor="@color/champion_detail_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/championSpellThreeText"
                app:layout_constraintTop_toTopOf="@+id/championSpellThreeText" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/championSpellFourImage"
                android:layout_width="@dimen/champion_detail_spell_image_size"
                android:layout_height="@dimen/champion_detail_spell_image_size"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/championSpellFourText"
                app:layout_constraintStart_toStartOf="@+id/championSpellFourText"
                app:layout_constraintTop_toBottomOf="@+id/championSpellFourText" />


            <TextView
                android:id="@+id/championLoreTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/lore"
                android:textColor="@color/champion_detail_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/championSpellOneImage" />

            <TextView
                android:id="@+id/championLoreText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/champion_detail_text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/championLoreTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>